style(core): Manually rename leftover references to `Genome`

--- a/src/evolvables/main_annotated.ipynb
+++ b/src/evolvables/main_annotated.ipynb
@@ -60,7 +60,7 @@
     "from core.controller import Controller\n",
     "from core.evaluator import Evaluator\n",
     "from core.population import Population\n",
-    "from core.population import Genome\n",
+    "from core.population import Individual\n",
     "from core.variator import Variator\n",
     "from core.controller import Controller\n",
     "from core.selector import Elitist\n",
@@ -85,7 +85,7 @@
     "    def __init__(self):\n",
     "        super().__init__(\"Given index out of bound!\")\n",
     "\n",
-    "T = TypeVar('T', bound=Genome)"
+    "T = TypeVar('T', bound=Individual)"
    ]
   },
   {
@@ -103,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Binary(Genome[T]):\n",
+    "class Binary(Individual[T]):\n",
     "    def __init__(self, len: int, value: typing.Optional[int] = None) -> None: \n",
     "        super().__init__()\n",
     "        self.length = len\n",
@@ -220,8 +220,8 @@
     "    init_pop.append(Binary.create_random(100))\n",
     "\n",
     "evaluator = BitDistanceEvaluator()\n",
-    "# The \"elistst\" wrapper maintains the best genome so far. It deposites that\n",
-    "#   genome into subsequent generations.\n",
+    "# The \"elistst\" wrapper maintains the best individual so far. It deposites that\n",
+    "#   individual into subsequent generations.\n",
     "pselector = Elitist(SimpleSelector[Binary](1, 100))\n",
     "cselector = Elitist(SimpleSelector[Binary](1, 100))\n",
     "variator = RandomBitMutator(0.006)\n",
