code(lgp): Complete control structures

--- a/evokit/evolvables/lgp.ipynb
+++ b/evokit/evolvables/lgp.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,14 @@
     "        \n",
     "        return f\"r[{self.target}] <- {function_name}({args})\"\n",
     "    \n",
-    "    __repr__ = __str__\n"
+    "    __repr__ = __str__\n",
+    "\n",
+    "class Conditional():\n",
+    "    def __init__(self: Self,\n",
+    "                 function: Callable[..., bool],\n",
+    "                 args: Tuple[int, ...]):\n",
+    "        self.function = function\n",
+    "        self.args = args\n"
    ]
   },
   {
@@ -187,6 +194,9 @@
     "    def get_output_values(self: Self) -> NDArray[np.float64]:\n",
     "        return self.registers[:self.coarity]\n",
     "\n",
+    "    def check(self: Self, cond: Conditional) -> bool:\n",
+    "        return cond.function(*(self.constants[-i-1] if i < 0 else self.registers[i]\\\n",
+    "                      for i in cond.args))\n",
     "\n",
     "    def _run_operation(self: Self, instruction: Operation):\n",
     "        if instruction.target < 0:\n",
@@ -284,14 +294,45 @@
     "    def __init__(self: Self):\n",
     "        self.action: Runner\n",
     "\n",
-    "    @property\n",
-    "    def action(self, lgp, ) -> None:\n",
-    "        Runner\n",
+    "from abc import abstractmethod\n",
+    "from abc import override\n",
     "\n",
+    "class Runner(ABC):\n",
+    "    @abstractmethod\n",
+    "    def __call__(self, lgp: LinearProgram, instructions: Sequence[Instruction]):\n",
+    "        pass\n",
     "\n",
-    "    \n",
+    "class For(Runner):\n",
+    "    def __init__(self: Self, count: int):\n",
+    "        self.count = count\n",
     "\n",
-    "# for, while, if"
+    "    @override\n",
+    "    def __call__(self, lgp: LinearProgram, instructions: Sequence[Instruction]):\n",
+    "        for _ in range(self.count):\n",
+    "            lgp.run(instructions)\n",
+    "\n",
+    "WHILE_LOOP_CAP = 20\n",
+    "\n",
+    "class While(Runner):\n",
+    "    def __init__(self: Self, conditional: Conditional):\n",
+    "        self.conditional = conditional\n",
+    "\n",
+    "    @override\n",
+    "    def __call__(self, lgp: LinearProgram, instructions: Sequence[Instruction]):\n",
+    "        for _ in range(WHILE_LOOP_CAP):\n",
+    "            if (lgp.check(self.conditional)):\n",
+    "                lgp.run(instructions)\n",
+    "            else:\n",
+    "                break\n",
+    "\n",
+    "class If(Runner):\n",
+    "    def __init__(self: Self, conditional: Conditional):\n",
+    "        self.conditional = conditional\n",
+    "\n",
+    "    @override\n",
+    "    def __call__(self, lgp: LinearProgram, instructions: Sequence[Instruction]):\n",
+    "        if (lgp.check(self.conditional)):\n",
+    "                lgp.run(instructions)\n"
    ]
   },
   {
