--- a/docs/source/guides/examples/gp.ipynb
+++ b/docs/source/guides/examples/gp.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "import os\n",
     "import sys\n",
-    "nb_dir = os.path.abspath(os.path.join('..', '..', '..'))\n",
+    "nb_dir = os.path.abspath(os.path.join('..', '..', '..', '..'))\n",
     "if nb_dir not in sys.path:\n",
     "    sys.path.append(nb_dir)"
    ]
