style(examples): Style fix

--- a/docs/source/guides/examples/accountant.ipynb
+++ b/docs/source/guides/examples/accountant.ipynb
@@ -129,7 +129,7 @@
    "source": [
     "Declare an `Accountant`, register it with a `SimpleLinearController`, then collect the result. Calling `Accountant.publish` returns a collection of `AccountantRecord`s; each record includes (a) what event triggers the collection, (b) during which generation the event is fired, and (c) the data collected.\n",
     "\n",
-    "Because the accountant is registered after generation 10, it only begins "
+    "Because the `Accountant` is registered after generation 10, it only begins to collect data in generation 11."
    ]
   },
   {
