doc(examples): Change titles to more descriptive ones

--- a/docs/source/guides/examples/selector.ipynb
+++ b/docs/source/guides/examples/selector.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Selector Example"
+    "# Creating a Custom `Selector`"
    ]
   },
   {
