--- a/docs/source/guides/examples/accountant.ipynb
+++ b/docs/source/guides/examples/accountant.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Accountant"
+    "# Collect Runtime Statistics with `Accountant`"
    ]
   },
   {
