doc(examples): Add uncommited changes
These changes had not been properly staged for previous commits.

Should probably squash them. Too much work.

--- a/docs/source/guides/examples/accountant.ipynb
+++ b/docs/source/guides/examples/accountant.ipynb
@@ -24,7 +24,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `Accountant` module "
+    "The `Accountant` module can collect runtime statistics.\n",
+    "\n",
+    "Without the module, it is still possible to collect statistics before and after each iteration. The following example prints individuals in a population."
    ]
   },
   {
@@ -96,7 +98,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The above approach can only take information after an iteration, not during.\n",
+    "The above approach can only take information before or after, but not during, an iteration.\n",
     "\n",
     "The `Accountant` module provides a way to collect information during an iteration. In short, an `Accountant` can be registered with a `Controller`; after that, the accountant is able to collect information from the `Controller` when an event fires.\n",
     "\n",
