doc(examples): Rework OneMax and Selector examples

--- a/docs/source/guides/examples/selector.ipynb
+++ b/docs/source/guides/examples/selector.ipynb
@@ -4,51 +4,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Creating a Custom `Selector`"
+    "# Custom `Selector`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In an evolutionary algorithm, a selector selects from a set of individuals into a strict subset. Because the process uses the fitness of individuals, selection takes place after evaluation:\n",
+    "\n",
+    "<center>\n",
+    "<img src='media/highlight-selector.svg' style='width: 40%'></img>\n",
+    "</center>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Initialise Population\n",
+    "\n",
+    "Evokit represents the population, the parent pool, and the offspring pool with `core.population.Population`.\n",
+    "\n",
+    "To begin, initialise a `Population` of binary string representations:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import sys\n",
-    "nb_dir = os.path.abspath(os.path.join('..', '..', '..', '..'))\n",
-    "if nb_dir not in sys.path:\n",
-    "    sys.path.append(nb_dir)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In an evolutionary algorithm, a selector selects from a set of individuals into a strict subset. The following diagram illustrates where selection occurs in a typical evolutionary algorithm:\n",
-    "\n",
-    "![what](media/highlight-selector.svg). "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'evokit'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mevokit\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcore\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Population\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mevokit\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mevolvables\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mbinstring\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m BinaryString\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'evokit'"
+     ]
+    }
+   ],
    "source": [
     "from evokit.core import Population\n",
     "from evokit.evolvables.binstring import BinaryString"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To use a selector, first create a `Population`. This example uses the binary string representation."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -76,12 +81,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To make things easier, manually assign a `.fitness` to each item in the population. This is normally done by a pre-defined `Evaluator`."
+    "For now, manually assign to the `.fitness` of each individual.\n",
+    "\n",
+    "In an algorithm, the `Evaluator` does this automatically. See the [OneMax tutorial](./onemax.html) for an example."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,12 +104,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Verify that all individuals are correctly evaluated:"
+    "Check the fitness of each individual. The fitness is the sum of all bits in a string."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -129,9 +136,19 @@
    "source": [
     "# Selector\n",
     "\n",
-    "The abstract class `Selector` implements three methods:\n",
+    "All custom selectors must derive `core.selector.Selector`.\n",
     "\n",
-    "- `.select` defines the strategy for a single selection operation. It has no default implementation.\n",
+    "The behaviour of a `Selector` can be defined on two levels: `.select_to_many` splits a tuple of individuals into chunks,  sends each chunk to `.select`, then collects and returns the result. The `.select_to_population` is a wrapper to `.select_to_many` that accepts and outputs populations, instead of tuples.\n",
+    "\n",
+    "\n",
+    "<center>\n",
+    "    <img src='media/ec-selection-strategies.svg' width=900em/>\n",
+    "</center>\n",
+    "\n",
+    "\n",
+    "At minimum, the implementation must do the following:\n",
+    "\n",
+    "1. Override method `.select` to defines the strategy for a single selection operation. It has no default implementation.\n",
     "\n",
     "- `.select_to_many` applies the `.select` to a collection of individuals. It also handles the removal of selected individuals from the original population. The default implementation repeatedly applies .select_to_many, until `.budget` items are selected.\n",
     "\n",
@@ -147,12 +164,12 @@
     "    def select_to_population(self,\n",
     "                             population: Population[D]) -> Population[D]: ...\n",
     "\n",
-    "    def select_to_many(self, population: Population[D]) -> Tuple[D, ...]:\n",
+    "    def select_to_many(self, population: Population[D]) -> tuple[D, ...]:\n",
     "        ...\n",
     "\n",
     "    @abstractmethod\n",
     "    def select(self,\n",
-    "               population: Population[D]) -> Tuple[D, ...]: ...\n",
+    "               population: Population[D]) -> tuple[D, ...]: ...\n",
     "```"
    ]
   },
@@ -167,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +201,7 @@
     "        super().__init__(3)\n",
     "\n",
     "    def select(self,\n",
-    "               population: Population[BinaryString]) -> Tuple[BinaryString]:\n",
+    "               population: Population[BinaryString]) -> tuple[BinaryString]:\n",
     "        \n",
     "        population.sort(lambda x: x.fitness)\n",
     "        selected_solution = population[0]\n",
@@ -200,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +270,7 @@
     "old_pop = pop\n",
     "selector = ExampleSimpleSelector()\n",
     "\n",
-    "selected_items = selector.select_to_many(old_pop)\n",
+    "selected_items = selector.select_population(old_pop)\n",
     "\n",
     "print(f\"Selected items are {[str(x) for x in selected_items]}\")  \n",
     "\n",
