style(gp; interceptor): PEP 785

--- a/docs/source/guides/examples/gp.ipynb
+++ b/docs/source/guides/examples/gp.ipynb
@@ -53,8 +53,7 @@
     "\n",
     "from evokit.evolvables.funcs import *\n",
     "from evokit.evolvables.gp import CrossoverSubtree, ProgramFactory, Program, SymbolicEvaluator\n",
-    "\n",
-    "from typing import Tuple"
+    "\n"
    ]
   },
   {
@@ -139,7 +138,7 @@
     "def weird_function(x):\n",
     "    return sin(x)+2*cos(x)\n",
     "\n",
-    "support: Tuple[Tuple[float], ...] = tuple((x/4,) for x in range(-80, 80))\n",
+    "support: tuple[tuple[float], ...] = tuple((x/4,) for x in range(-80, 80))\n",
     "\n",
     "symbolic_fitness: SymbolicEvaluator = SymbolicEvaluator(objective=weird_function, support = support)"
    ]
@@ -511,14 +510,13 @@
    ],
    "source": [
     "from typing import Sequence\n",
-    "from typing import Tuple\n",
     "from typing import Callable\n",
     "\n",
     "from matplotlib import pyplot as plt\n",
     "from matplotlib.patches import Patch\n",
     "\n",
     "def plot_range(function: Callable[[float], float],\n",
-    "               support:Sequence[Tuple[float,]],\n",
+    "               support:Sequence[tuple[float,]],\n",
     "               color: str,\n",
     "               alpha: float,\n",
     "               linewidth: float):\n",
