--- a/docs/source/guides/examples/interceptor.ipynb
+++ b/docs/source/guides/examples/interceptor.ipynb
@@ -252,7 +252,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This use case is common in the framework. For example, all selectors share methods named `.select` and `.select_to_many`. It would be good to be able to change the behaviour of an instance of a selector without modifying or extending its class."
+    "This use case is common in the framework. For example, all selectors share methods named `.select` and `.select_population`. It would be good to be able to change the behaviour of an instance of a selector without modifying or extending its class."
    ]
   },
   {
@@ -263,20 +263,20 @@
    "source": [
     "from evokit.core import Selector, Population, Individual\n",
     "\n",
-    "from typing import Callable, Tuple, TypeVar, Any\n",
+    "from typing import Callable, TypeVar, Any\n",
     "\n",
     "D = TypeVar(\"D\", bound=Individual)\n",
     "\n",
     "def Elitist(sel: Selector[D]) -> Selector:\n",
     "\n",
-    "    def wrap_function(original_select_to_many:\n",
+    "    def wrap_function(original_select_population:\n",
     "                      Callable[[Selector[D], Population[D]],\n",
-    "                               Tuple[D, ...]]) -> Callable:\n",
+    "                               Population[D]]) -> Callable:\n",
     "\n",
-    "        @wraps(original_select_to_many)\n",
+    "        @wraps(original_select_population)\n",
     "        def wrapper(self: Selector[D],\n",
     "                    population: Population[D],\n",
-    "                    *args: Any, **kwargs: Any) -> Tuple[D, ...]:\n",
+    "                    *args: Any, **kwargs: Any) -> Population[D]:\n",
     "\n",
     "            population_best: D = population.best()\n",
     "            my_best: D\n",
@@ -301,16 +301,16 @@
     "            #print(f\", {str(hof_individual)}score is m{my_best.fitness} > p{population_best.fitness}\")\n",
     "\n",
     "            # Acquire results of the original selector\n",
-    "            results: Tuple[D, ...] = \\\n",
-    "                original_select_to_many(self, population, *args, **kwargs)\n",
+    "            results: tuple[D, ...] = \\\n",
+    "                original_select_population(self, population, *args, **kwargs)\n",
     "\n",
     "            # Append the best individual to results\n",
-    "            return (*results, hof_individual.copy())\n",
+    "            return Population(*results, hof_individual.copy())\n",
     "        return wrapper\n",
     "\n",
-    "    setattr(sel, 'select_to_many',\n",
+    "    setattr(sel, 'select_population',\n",
     "            MethodType(\n",
-    "                wrap_function(sel.select_to_many.__func__),  # type:ignore\n",
+    "                wrap_function(sel.select_population.__func__),  # type:ignore\n",
     "                sel))\n",
     "    return sel"
    ]
